# pytest-tox-GitHubActions

./: README.md  print_calculation.py  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py
src/random_int_req/: print_request_random.py
src/random_int_req.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_print_request_random.py
