[metadata]
name = random_int_req
version = 0.1.0
author = matías ciruelos
author_email = ciruelosmf@gmail.com
description = request a random int to an API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ciruelosmf/pytest-tox-GitHubActions
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9


[options]
packages =
    random_int_req
install_requires =
    requests>=2
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
random_int_req = py.typed

[flake8]
max-line-length = 160
